feat: correcoes de null-safety e configuracao do render